# docagent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
corpus/fastapi/: SOURCE.md
docs/: engineering-notes.md
sample_docs/: about_docagent.md  architecture.md  faq.md
sample_notes/: abstention-and-refusal.md  adam-and-adamw.md  adapter-layers.md  agentic-rag-pattern.md  alibi-position-bias.md  approximate-nearest-neighbour.md  attention-quadratic-cost.md  beam-search.md  bi-encoder-retrieval.md  bm25-scoring.md  byte-level-tokenization.md  byte-pair-encoding.md  causal-attention-masking.md  causal-language-modeling.md  chunk-overlap.md  constrained-decoding.md  context-precision-and-recall.md  context-window-management.md  cosine-lr-schedule.md  cosine-vs-dot-product-similarity.md  cross-attention.md  cross-encoder-reranker.md  dense-and-sparse-retrieval.md  direct-preference-optimization.md  document-chunking-strategies.md  dropout-regularization.md  emergent-abilities.md  evaluating-rag-systems.md  exact-knn-search.md  faithfulness-and-citation-grounding.md  feed-forward-network-block.md  flash-attention.md  full-fine-tuning.md  gradient-accumulation.md  gradient-clipping.md  greedy-decoding.md  grounding-and-attribution.md  hallucination.md  hnsw-graph-index.md  hypothetical-document-embeddings.md  (+62 more)
scripts/: calibrate_threshold.py  check_retrieval.py  check_web.py  fetch_arxiv.py  generate_qa.py
src/citelocal_agent/: __init__.py  agent.py  ask.py  bm25_index.py  chat.py  configuration.py  ingest.py  logging_config.py  orchestrator.py  prompts.py  retriever.py  schemas.py  security.py  utils.py  vectorstore.py  verify.py  web.py
src/citelocal_agent/eval/: qa_dataset.py  run_eval.py
src/citelocal_agent/eval/data/: qa_cases.jsonl
src/citelocal_agent/static/: index.html
src/citelocal_agent/tools/: __init__.py  retrieval_tools.py  web_tools.py
src/docagent/: __init__.py  agent.py  ask.py  configuration.py  ingest.py  orchestrator.py  prompts.py  retriever.py  schemas.py  utils.py  vectorstore.py  web.py
src/docagent/eval/: prompts.py  qa_dataset.py  run_eval.py
src/docagent/eval/data/: qa_cases.jsonl
src/docagent/static/: index.html
src/docagent/tools/: __init__.py  base.py  retrieval_tools.py
tests/: conftest.py  run_all_tests.py  test_chat.py  test_orchestrator.py  test_response.py  test_retrieval.py  test_unit.py  test_web.py
