[project]
name = "docagent"
version = "0.1.0"
description = "Chat with your papers and docs — fully local agentic RAG with page-precise, verified citations"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "pypdf>=4.0.0",
    "python-dotenv",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-xdist", "ruff>=0.6.1", "mypy>=1.11.1"]
cli = ["langgraph-cli[inmem]>=0.4.0"]    # for `langgraph dev`
ollama = ["langchain-ollama>=0.2.0"]     # for LLM_MODEL=ollama:... (fully local)

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docagent = ["static/*", "py.typed"]

[tool.ruff]
src = ["src", "tests", "scripts"]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"src/docagent/web.py" = ["E402"]
